--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,18 +5,14 @@ set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
 
 set(RAPIDJSON_USE_SSE2 ON)
 
-find_package(rapidjson REQUIRED)
-include_directories("${RAPIDJSON_INCLUDE_DIRS}")
-
-find_package(TcMalloc REQUIRED)
-IF (TcMalloc_FOUND)
-    include_directories(${TcMalloc_INCLUDE_DIR})
-    target_link_libraries (geolocator ${TcMalloc_LIBRARIES})
-endif()
-
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${RAPIDJSON_CXX_FLAGS} -std=c++14 -Wall -O3")
 
-set(SOURCE_FILES src/main.cpp lib/optional.hpp lib/crow_all.h src/country.cpp src/country.h src/country_shape.cpp src/country_shape.h src/tools.cpp src/tools.h)
+set(SOURCE_FILES src/main.cpp
+        lib/optional.hpp
+        lib/crow_all.h
+        src/country.cpp src/country.h
+        src/country_shape.cpp src/country_shape.h
+        src/tools.cpp src/tools.h src/region_shape.cpp src/region_shape.h src/region.cpp src/region.h)
 
 add_executable(geolocator ${SOURCE_FILES})
 
@@ -28,15 +24,18 @@ endif()
 
 set(Boost_USE_STATIC_LIBS        ON)
 set(Boost_USE_MULTITHREADED      ON)
-set(Boost_USE_STATIC_RUNTIME    OFF)
-find_package(Boost 1.60.0 COMPONENTS date_time filesystem system thread)
+set(Boost_USE_STATIC_RUNTIME     ON)
+find_package(Boost 1.63.0 COMPONENTS date_time filesystem system thread)
 if(Boost_FOUND)
     include_directories(${Boost_INCLUDE_DIRS})
     target_link_libraries(geolocator ${Boost_LIBRARIES})
 endif()
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
+find_package(TcMalloc REQUIRED)
+IF (TcMalloc_FOUND)
+    include_directories(${TcMalloc_INCLUDE_DIR})
+    target_link_libraries (geolocator ${TcMalloc_LIBRARIES})
+endif()
 
-file(COPY resources DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug)
-file(COPY resources DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Release)
+file(COPY resources DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}.)
 
