--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,37 +5,30 @@ set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
 
 set(RAPIDJSON_USE_SSE2 ON)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${RAPIDJSON_CXX_FLAGS} -std=c++14 -Wall -O3")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${RAPIDJSON_CXX_FLAGS} -std=c++11 -Wall -O3")
 
 set(SOURCE_FILES src/main.cpp
         lib/optional.hpp
         lib/crow_all.h
-        src/country.cpp src/country.h
-        src/country_shape.cpp src/country_shape.h
-        src/tools.cpp src/tools.h src/region_shape.cpp src/region_shape.h src/region.cpp src/region.h src/woe_data.cpp src/woe_data.h)
+        src/Country.cpp src/Country.h
+        src/CountryShape.cpp src/CountryShape.h
+        src/Tools.cpp src/Tools.h
+        src/RegionShape.cpp src/RegionShape.h
+        src/Region.cpp src/Region.h
+        src/WoeData.cpp src/WoeData.h
+        src/SocketServer.cpp src/SocketServer.h
+        src/SocketSession.cpp src/SocketSession.h
+        src/HandlerAllocator.cpp src/HandlerAllocator.h
+        src/Protocol.cpp src/Protocol.h src/ProtocolMessage.cpp src/ProtocolMessage.h)
 
 add_executable(geolocator ${SOURCE_FILES})
 
 find_package(GDAL REQUIRED)
 IF (GDAL_FOUND)
     include_directories(${GDAL_INCLUDE_DIR})
-    target_link_libraries (geolocator ${GDAL_LIBRARIES})
+    target_link_libraries(geolocator ${GDAL_LIBRARIES})
 endif()
 
-set(Boost_USE_STATIC_LIBS        ON)
-set(Boost_USE_MULTITHREADED      ON)
-set(Boost_USE_STATIC_RUNTIME     ON)
-find_package(Boost 1.63.0 COMPONENTS date_time filesystem system thread)
-if(Boost_FOUND)
-    include_directories(${Boost_INCLUDE_DIRS})
-    target_link_libraries(geolocator ${Boost_LIBRARIES})
-endif()
-
-find_package(TcMalloc REQUIRED)
-IF (TcMalloc_FOUND)
-    include_directories(${TcMalloc_INCLUDE_DIR})
-    target_link_libraries (geolocator ${TcMalloc_LIBRARIES})
-endif()
 
 find_package(asio REQUIRED)
 
