--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 2.8)
 project(geolocator)
 
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
 
 set(RAPIDJSON_USE_SSE2 ON)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${RAPIDJSON_CXX_FLAGS} -std=c++11 -Wall -O3")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${RAPIDJSON_CXX_FLAGS} -std=c++11 -Wall -O3 -pthread")
 
 set(SOURCE_FILES src/main.cpp
         lib/optional.hpp
@@ -19,7 +19,8 @@ set(SOURCE_FILES src/main.cpp
         src/SocketServer.cpp src/SocketServer.h
         src/SocketSession.cpp src/SocketSession.h
         src/HandlerAllocator.cpp src/HandlerAllocator.h
-        src/Protocol.cpp src/Protocol.h src/ProtocolMessage.cpp src/ProtocolMessage.h)
+        src/Protocol.cpp src/Protocol.h
+        src/ProtocolMessage.cpp src/ProtocolMessage.h)
 
 add_executable(geolocator ${SOURCE_FILES})
 
